--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,22 @@
-/* 
+body {
+  background-color: #f5f5f5;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
 
-*/
+.digit {
+  background-color: black;
+  color: white;
+  font-size: 3rem;
+  font-family: monospace;
+  padding: 20px;
+  margin: 5px;
+  border-radius: 5px;
+  min-width: 60px;
+  text-align: center;
+}
